<?xml version="1.0"?>
<package format="2">
  <name>nav2</name>
  <version>0.0.0</version>
  <description>The nav2 package</description>

  <maintainer email="koen@todo.todo">koen</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav2d</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>urgnode</build_depend>
  <build_export_depend>nav2d</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>urgnode</build_export_depend>
  <exec_depend>nav2d</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>urgnode</exec_depend>



  <export>

  </export>
</package>
